--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,15 @@
         href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
     />
     <link rel="stylesheet" href="style.css" />
-    <meta name="viewport" , content="width=device-width, initial-scale=1" />
+    <meta
+        name="viewport"
+        ,
+        content="width=device-width"
+        ,
+        initial-scale="1"
+        ,
+        minimum-scale="1"
+    />
 </head>
 
 <main></main>
