--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
         rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
     />
+    <link rel="shortcut icon" type="image/png" href="/public/favicon.ico" />
     <link rel="stylesheet" href="style.css" />
     <meta
         name="viewport"
