--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>Crounter</title>
+    <title>Stash Track</title>
     <link
         rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
@@ -16,3 +16,4 @@
 <main></main>
 
 <script src="/bundle.js"></script>
+</html>
