--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <head>
     <title>Stash Track</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
         rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+    />
+    <link
+        rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap"
     />
     <link rel="stylesheet" href="style.css" />
     <meta
