--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <head>
     <title>Stash Track</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link
         rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
